[gd_scene load_steps=4 format=3 uid="uid://cahpofhknpg63"]

[ext_resource type="Script" path="res://scripts/item.gd" id="1_iijl1"]
[ext_resource type="Texture2D" uid="uid://clx6lvekle6nv" path="res://objects/fire.png" id="2_24qe0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htxgr"]
size = Vector2(111, 121)

[node name="Item" type="Node2D"]
z_index = 1
script = ExtResource("1_iijl1")
id = "fire"
image = ExtResource("2_24qe0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.257317, 0.231319)
texture = ExtResource("2_24qe0")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.5, -4.5)
shape = SubResource("RectangleShape2D_htxgr")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
